2008-12-11  Enrico Ros  <enrico.ros@m31.com>

        Reviewed by Simon Hausmann.

        Fix the broken focus behavior that happened when QWebPage lost
        focus to a popup menu.

        The previous code didn't notify the QWebPage at all when the
        focus was back in (breaking focus rects, caret blinking, ...).
        By the way when a popup is show, 2 FocusOut events are delivered
        to the QWebPage, but this doesn't seem to hurt.

        Added a test to check popup opening, closing a lineedit blinks.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::focusInEvent):
        (QWebPagePrivate::focusOutEvent):
        * tests/qwebframe/tst_qwebframe.cpp:
        (tst_QWebFrame::):

2008-12-11  Ariya Hidayat  <ariya.hidayat@trolltech.com>

        Reviewed by Tor Arne Vestbø.

        When the web page is navigated away, delete the instance
        of the native plugin.

        http://trolltech.com/developer/task-tracker/index_html?id=214946&method=entry

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::):
        * tests/qwebpage/tst_qwebpage.cpp:
        (PluginTrackedPage::PluginTrackedPage):
        (PluginTrackedPage::createPlugin):
        (tst_QWebPage::destroyPlugin):

2008-12-11  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Simon Hausmann.

        Allow applications to save and restore their state between loads.

        * Api/qwebframe.cpp:
        * Api/qwebframe.h:
        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::restoreViewState):
        (WebCore::FrameLoaderClientQt::saveViewStateToItem):
        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::modified):

2008-12-08  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Darin Adler and Holger Freyther.

        Make Widget::frameRectsChanged() and overrides non-const

        This will hopefully allow us to get rid of some of the mutables in